# Smart-Preload

./: .gitignore  LICENSE  NOTICE  PRIVACY.de.md  PRIVACY.es.md  PRIVACY.fr.md  PRIVACY.ja.md  PRIVACY.ko.md  PRIVACY.md  PRIVACY.pt-BR.md  PRIVACY.ru.md  PRIVACY.zh-CN.md  PRIVACY.zh-TW.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  README.zh-TW.md
app/: Cargo.toml  README.md  install-register.cmd  install-register.ps1
app/src/: api.rs  lifecycle.rs  main.rs  model.rs  runtime_debug.rs  tray.rs  window.rs
app/src/api/: auth.rs  cors.rs  origin.rs  persistence.rs  server.rs  state.rs
app/src/api/routes/: ai.rs  app_update.rs  diagnostics.rs  extension.rs  mod.rs  system.rs  windows.rs
app/src/lifecycle/: chrome.rs  extension.rs  host.rs  install.rs  native_messaging.rs  watcher.rs
app/src/lifecycle/extension/: manifest.rs  mod.rs  profile.rs  scan.rs  storage.rs
app/src/lifecycle/install/: mod.rs  origin.rs  registry.rs  status.rs
app/src/lifecycle/native_messaging/: manifest.rs  mod.rs  process.rs  protocol.rs  registry.rs
app/src/model/: catalog.rs  infer.rs  runtime.rs  status.rs  types.rs
app/src/model/runtime/: install.rs  paths.rs  process.rs
app/src/model/status/: models.rs  (+1 more)
app/src/telemetry/: activity.rs  hardware.rs  mod.rs  performance.rs  sampler.rs  types.rs  utils.rs
app/src/update/: download.rs  job.rs  marker.rs  mod.rs  model.rs  paths.rs  script.rs  signing-public.json  verification.rs
app/src/window/: actions.rs  enumerate.rs  manager.rs
(+832 files in other folders)
